feat: add sign out and refresh token API
